# xueqiu_funds

./: .gitignore  README.md  fund_detail.json  fund_intro.json  main.py  pyproject.toml  requirements.txt
examples/: find_funds_with_the_lowest_fees.py  fund_fees_comparison.py  fund_fees_comparison.xlsx  quick_start.py
examples/find_funds_with_the_lowest_fees/: run.ipynb
examples/fund_estimated_increase/: run.py
examples/fund_fees_comparison/: fund_fees_comparison.ipynb
examples/quick_start/: quick_start.py
examples/runtime/000834_大成纳斯达克100ETF联接（QDII）A/: fund_detail.json  fund_intro.json
examples/runtime/003766_广发创业板ETF联接C/: fund_detail.json  fund_intro.json
examples/runtime/004855_广发中证全指汽车指数C/: fund_detail.json  fund_intro.json
examples/runtime/007339_易方达沪深300ETF联接C/: fund_detail.json  fund_intro.json
examples/runtime/007818_国泰中证全指通信设备ETF联接基金C/: fund_detail.json  fund_intro.json
examples/runtime/008115_天弘中证红利低波动100C/: fund_detail.json  fund_intro.json
examples/runtime/008586_华夏中证人工智能主题ETF联接C/: fund_detail.json  fund_intro.json
examples/runtime/008682_富国中证红利指数增强C/: fund_detail.json  fund_intro.json
examples/runtime/008888_华夏国证半导体芯片ETF联接C/: fund_detail.json  fund_intro.json
examples/runtime/010956_天弘中证智能汽车C/: fund_detail.json  fund_intro.json
examples/runtime/011613_华夏上证科创板50成份ETF联接C/: fund_detail.json  fund_intro.json
examples/runtime/012832_南方中证新能源ETF联接C/: fund_detail.json  fund_intro.json
examples/runtime/014881_天弘中证机器人ETF发起联接C/: fund_detail.json  fund_intro.json
examples/runtime/016858_国金量化多因子C/: fund_detail.json  fund_intro.json
xueqiu_fund/: __init__.py  middleware.py
xueqiu_funds/: __init__.py  client.py
xueqiu_funds/middleware/: __init__.py  fund_detail.py  fund_intro.py
(+4 files in other folders)
